# Model-Compression-Techniques

./: README.md  pyproject.toml
notebooks/int8/: training.ipynb
notebooks/knowledge_distillation/: training.ipynb
notebooks/pruning/: training.ipynb
notebooks/quant_fp16/: training.ipynb
src/classification/: annotator.py  dataset.py  trainer.py  utils.py  visualizer.py
src/knowledge_distillation/: fpn_feature_hooks.py  kd_losses.py  student_model_builder.py  train.py  utils.py
src/pruning/: prune.py
src/quant/: fp16.py
src/quant_fp16/: utils.py
